finished fixing a couple of bugs on mobile view

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -26,8 +26,13 @@
   min-height: 44px;
   background-color: #602040;
 }
+@media (max-width: 500px) {
+  .top-bar {
+    position: static;
+  }
+}
 .top-bar .container {
-  width: 100%;
+  width: 1280px;
   display: flex;
   justify-content: none;
   align-items: none;
@@ -36,14 +41,15 @@
   letter-spacing: 1px;
   padding: 0 10px;
 }
-@media (min-width: 500px) {
+@media (max-width: 800px) {
   .top-bar .container {
-    flex-direction: column;
+    width: 100%;
   }
 }
-@media (min-width: 1280px) {
+@media (max-width: 500px) {
   .top-bar .container {
-    width: 1280px;
+    flex-direction: column;
+    position: static;
   }
 }
 .top-bar .container a {
@@ -54,66 +60,65 @@
   text-decoration: underline;
 }
 .top-bar .container .container-left {
-  width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: row;
-  flex-direction: column;
   flex: 1;
   font-size: 14px;
 }
-@media (min-width: 500px) {
+@media (max-width: 500px) {
   .top-bar .container .container-left {
+    width: 100%;
     display: flex;
-    justify-content: none;
+    justify-content: center;
     align-items: center;
     flex-direction: row;
+    flex-direction: column;
+    line-height: 50px;
+    border-bottom: 1px solid #fff;
+    font-size: 20px;
   }
 }
 .top-bar .container .container-left span {
   cursor: pointer;
-  margin-right: 25%;
 }
 .top-bar .container .container-center {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
-  flex-direction: column;
   flex: 3;
   font-size: 14px;
 }
-@media (min-width: 500px) {
+@media (max-width: 500px) {
   .top-bar .container .container-center {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: row;
+    flex-direction: column;
+    line-height: 50px;
+    font-size: 18px;
   }
 }
 .top-bar .container .container-center span {
   cursor: pointer;
-  margin-right: 5%;
-}
-.top-bar .container .container-center span:last-child {
-  margin-right: 0;
 }
 .top-bar .container .container-right {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   flex-direction: row;
-  flex-direction: column;
   flex: 1;
   font-size: 14px;
 }
-@media (min-width: 500px) {
+@media (max-width: 500px) {
   .top-bar .container .container-right {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     flex-direction: row;
+    flex-direction: column;
+    line-height: 50px;
+    font-size: 20px;
+    border-top: 1px solid #fff;
   }
 }
 .top-bar .container .container-right span {
@@ -126,28 +131,31 @@
   flex-direction: row;
   background-color: #fff;
   border-bottom: 1px solid lightgrey;
-  width: 100%;
+  width: 1280px;
   height: 120px;
   border-radius: 0 0 20px 20px;
   margin-top: 44px;
   padding-bottom: 15px;
 }
-@media (min-width: 1280px) {
+@media (max-width: 1279px) {
   .header {
-    width: 1280px;
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .header {
+    margin-top: 0;
   }
 }
 .header .logo {
-  max-width: 500px;
-  width: 100%;
+  width: 500px;
   height: auto;
   margin: 0 auto;
 }
-.header span {
-  align-self: flex-end;
-  font-size: 11px;
-  font-weight: bold;
-  letter-spacing: 1px;
+@media (max-width: 500px) {
+  .header .logo {
+    width: 100%;
+  }
 }
 .tabs {
   border-bottom: 1px solid lightgrey;
@@ -155,15 +163,15 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  width: 100%;
+  width: 1280px;
   height: 47px;
   background-color: #602040;
   border-radius: 20px;
   margin-top: 10px;
 }
-@media (min-width: 1280px) {
+@media (max-width: 1279px) {
   .tabs {
-    width: 1280px;
+    width: 100%;
   }
 }
 .tabs .topics {
@@ -176,6 +184,11 @@
   font-size: 12px;
   letter-spacing: 1px;
   font-weight: bold;
+}
+@media (max-width: 500px) {
+  .tabs .topics .title.about {
+    display: none;
+  }
 }
 .tabs .topics .tab {
   display: flex;
@@ -204,15 +217,16 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  width: 100%;
+  width: 1280px;
   background-color: #fff;
   border-radius: 20px;
+  padding: 0 40px 10px;
   margin-top: 10px;
   flex-direction: column;
 }
-@media (min-width: 1280px) {
+@media (max-width: 1279px) {
   .intro {
-    width: 1280px;
+    width: 98%;
   }
 }
 .cards-container {
@@ -220,13 +234,13 @@
   justify-content: space-evenly;
   align-items: none;
   flex-direction: row;
-  width: 100%;
+  width: 1200px;
   margin-top: 16px;
   flex-wrap: wrap;
 }
-@media (min-width: 1280px) {
+@media (max-width: 1199px) {
   .cards-container {
-    width: 1200px;
+    width: 98%;
   }
 }
 .cards-container .card {
@@ -236,11 +250,15 @@
   align-items: none;
   flex-direction: column;
   background-color: #fff;
-  min-width: 450px;
   width: 49%;
   border-radius: 20px;
   margin-bottom: 16px;
   padding: 24px;
+}
+@media (max-width: 500px) {
+  .cards-container .card {
+    width: 98%;
+  }
 }
 .cards-container .card .photo {
   width: 100%;
@@ -252,13 +270,13 @@
   justify-content: space-evenly;
   align-items: none;
   flex-direction: row;
-  width: 100%;
+  width: 1200px;
   margin-top: 16px;
   flex-flow: wrap column;
 }
-@media (min-width: 1280px) {
+@media (max-width: 1199px) {
   .cards-container-about {
-    width: 1200px;
+    width: 100%;
   }
 }
 .cards-container-about .card {
@@ -288,7 +306,7 @@
   color: #000;
 }
 .footer {
-  width: 100%;
+  width: 1280px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -301,9 +319,9 @@
 .footer h5 {
   margin: 0 auto;
 }
-@media (min-width: 1280px) {
+@media (max-width: 1279px) {
   .footer {
-    width: 1280px;
+    width: 100%;
   }
 }
 * {
