--- a/components/TopBar/TopBar.less
+++ b/components/TopBar/TopBar.less
@@ -4,17 +4,23 @@
   position: fixed;
   min-height: 44px;
   background-color: @research-pal-color-primary;
+
+  @media(max-width: 500px){
+    position: static;
+  }
+
   .container {
-    .width-100();
+    width: 1280px;
     .flex();
     color: @research-pal-color-white;
     letter-spacing: 1px;
     padding: 0 10px;
-    @media(min-width: 500px){
-      flex-direction: column;
+    @media(max-width: 800px){
+      .width-100();
     }
-    @media(min-width: 1280px){
-      width: 1280px;
+    @media(max-width: 500px){
+      flex-direction: column;
+      position: static;
     }
 
     a{
@@ -25,43 +31,46 @@
       }
     }
     .container-left {
-      .width-100();
-      .flex(center, center);
-      flex-direction: column; 
+      .flex(flex-start, center);
       flex: 1;
       font-size: 14px;
-      @media(min-width: 500px){
-        .flex(none, center);
+      @media(max-width: 500px){
+        .width-100();
+        .flex(center, center);
+        flex-direction: column; 
+        line-height: 50px;
+        border-bottom: 1px solid @research-pal-color-white;
+        font-size: 20px;
       }
       span {
         cursor: pointer;
-        margin-right: 25%;
       }
     }
     .container-center {
       .flex(space-evenly, center);
-      flex-direction: column; 
       flex: 3;
       font-size: 14px;
-      @media(min-width: 500px){
-        .flex(space-evenly, center);
+      @media(max-width: 500px){
+        flex-direction: column; 
+        line-height: 50px;
+        font-size: 18px;
+
       }
       span {
         cursor: pointer;
-        margin-right: 5%;
-        &:last-child{
-          margin-right: 0;
-        }
       }
     }
 
     .container-right {
-      .flex(center, center);
-      flex-direction: column; 
+      .flex(flex-end, center);
       flex: 1;
       font-size: 14px;
-      @media(min-width: 500px){
-        .flex(flex-end, center);
+      @media(max-width: 500px){
+        .flex(center, center);
+        flex-direction: column;
+        line-height: 50px;
+        font-size: 20px;
+        border-top: 1px solid @research-pal-color-white;
       }
       span {
         cursor: pointer;
